Add : multiMAN payload is now fw independent.
Fix : No more freeze when the firmware is unknown/new. I'm not sure how I fixed it tho.
Add : New CUSTOM PS2 CONFIG files from webMAN MOD by aldostools December 14, 2020. Special thanks to kozarovv.
Add : New ps2 widescreen pnatchs from pcsx2.net forum (January 13, 2021).
Add FileManager : Extract RAR files.

Notes :
(1) This note is for devs.
I used the  FatFs module http://www.elm-chan.org/fsw/ff/00index_e.html ported to ps3 (psl1ght) by tps/lmirel https://github.com/lmirel/fatfs_psx.
I did few modifications in the lib.
- enabled GPT with FF_LBA64
- changed FF_VOLUMES from 8 to 131
- modified how the lib 'catch' the volume id to be able to have more than 1 digit id
I increased the number of volume to support usb device from 0 for dev_usb000 to 127 for dev_usb127, 128 for dev_sd, 129 for dev_cf and 130 for dev_ms.
Multipartition is disabled.
To support exFAT without changing to much code in ManaGunZ I included 2 files, exFAT.c and mgz_io.c
exFAT.c : it allows you to manage the exFAT devices : mount, unmount etc.
mgz_io.c : it replaces several standard functions (some of them are slow/broken in psl1ght anyway) with new ones that support ps3 native file system (ufs2, fat16, fat32), ntfs and exFAT.
The preffix "exFAT" is used to detect if it's an exFAT device in mgz_io.c 


v1.38
Add : Support CFW/HEN 486C
Add FileManager : PictureViewer : support DDS, GTF, BMP, WEBP, TIFF, TGA, GIM and mores...
Fix FileManager : The scroll bar is now visible.
Fix : ManaGunZ won't set chinese language when the PS3 system is set with german language.
Removed : SHA-1 calculation from file properties.

v1.37
Add : Support the firmware 4.85C.
Fix : Issue with syscall 35. It fix the function to mount JB backups with cobra or mamba, among others.
Fix FileManager : Issue to open /dev_bdvd.
Add FileManager : Symbolic links. See Notes (1).

Notes :
(1) It use cobra/mamba syscall 35.
For example if you want to redirect app_home to dev_bdvd